cabal-version:      3.4
name:               redirect
version:            1.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Bradley Sherman
maintainer:         sirrus233@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable bootstrap
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.17.2 && < 4.18,
                      aeson >= 2.2.3 && < 2.3,
                      hal >= 1.1 && < 1.2,
    hs-source-dirs:   app
    default-language: Haskell2010
