cabal-version:      3.4
name:               redirect
version:            1.0
license:            ISC
author:             Bradley Sherman
maintainer:         sirrus233@gmail.com
category:           Network
build-type:         Simple

common warnings
    ghc-options: -Wall

executable bootstrap
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.17.2 && < 4.18,
                      text >= 2.0.2 && < 2.1,
                      aeson >= 2.2.3 && < 2.3,
                      hal >= 1.1 && < 1.2,
    hs-source-dirs:   src
    default-language: Haskell2010
